--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/Lucas-Moreno/app-pangolin#readme",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
