--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     env_file:
       - ./backend/.env
     depends_on:
-      - mongo
+      - mongodb
 
   frontend:
     container_name: pangolin-frontend
@@ -27,6 +27,8 @@ services:
     restart: always
     ports:
       - "4200:4200"
+    depends_on:
+      - backend
 
 volumes:
   mongodb:
