--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -58,6 +58,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "host": "0.0.0.0"
+          },
           "configurations": {
             "production": {
               "browserTarget": "frontend:build:production"
